[gd_scene load_steps=7 format=3 uid="uid://drrj2p8jki722"]

[ext_resource type="Script" path="res://node_classes/drop_item/drop_item.gd" id="1_cb1gm"]
[ext_resource type="Texture2D" uid="uid://mcfl36huhy3" path="res://media/sprites/assets/Aluminium.png" id="2_xf417"]
[ext_resource type="Script" path="res://scripts/rarity_glow.gd" id="3_emcxs"]
[ext_resource type="PackedScene" uid="uid://bld81khrcmege" path="res://node_classes/off_screen_indicator/off_screen_indicator.tscn" id="4_csg6c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rbgfs"]
radius = 81.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5bx0r"]
load_path = "res://.godot/imported/Aluminium.png-81f53591086a1de7aa9cb37566384df5.ctex"

[node name="DropItem" type="Area2D"]
light_mask = 0
scale = Vector2(0.5, 0.5)
collision_layer = 4
script = ExtResource("1_cb1gm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rbgfs")

[node name="Sprite" type="Sprite2D" parent="."]
light_mask = 0
texture = SubResource("CompressedTexture2D_5bx0r")

[node name="RarityGlow" type="Sprite2D" parent="Sprite"]
modulate = Color(2, 2, 2, 1)
show_behind_parent = true
light_mask = 0
scale = Vector2(1.05, 1.05)
texture = ExtResource("2_xf417")
script = ExtResource("3_emcxs")

[node name="OffScreenIndicator" parent="." instance=ExtResource("4_csg6c")]
self_modulate = Color(0.262745, 1, 0.14902, 0.427451)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
